# RemoteRadar

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-pipeline.yml
dashboard/: __init__.py  app.py  data.py  requirements.txt
dashboard/sample_data/: mart_companies.csv  mart_jobs_over_time.csv  mart_salary_ranges.csv  mart_skills.csv
scripts/: gen_sample_data.py
sql/: 001_create_raw_remotive_jobs.sql  002_create_raw_remoteok_jobs.sql  003_create_raw_adzuna_jobs.sql
src/remoteradar/: __init__.py  config.py  load.py  pipeline.py  validate.py
src/remoteradar/extract/: __init__.py  adzuna.py  remoteok.py  remotive.py
src/remoteradar/orchestration/: __init__.py  flow.py
src/remoteradar/quality/: __init__.py  checks.py  suites.py
tests/: conftest.py  test_adzuna.py  test_config.py  test_dashboard_data.py  test_orchestration_flow.py  test_pipeline.py  test_quality_suites.py  test_remoteok.py  test_remotive.py  test_validate.py
tests/fixtures/: mart_companies.csv  mart_jobs_over_time.csv  mart_salary_ranges.csv  raw_remotive_jobs.json  stg_jobs.csv
transform/: dbt_project.yml  profiles.yml
transform/models/marts/: mart_companies.sql  mart_jobs_over_time.sql  mart_salary_ranges.sql  mart_skills.sql  schema.yml
transform/models/staging/: schema.yml  sources.yml  stg_adzuna_jobs.sql  stg_remoteok_jobs.sql  stg_remotive_jobs.sql
transform/seeds/: exchange_rates.csv  schema.yml
transform/tests/generic/: min_not_greater_than_max.sql
