[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "remoteradar"
version = "0.1.0"
description = "ETL pipeline that collects remote tech job postings from public APIs and loads them into a PostgreSQL warehouse."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ikergoncalves" }]
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "great-expectations>=1.19,<2",
    # GX does not ship SQLAlchemy by default; needed by its postgres
    # datasource (used with the psycopg v3 driver above, not psycopg2).
    "sqlalchemy>=2.0",
]

[project.scripts]
remoteradar = "remoteradar.pipeline:main"
remoteradar-validate = "remoteradar.validate:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "dbt-core>=1.8",
    "dbt-postgres>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
